@@ -1,30 +1,44 @@
 package com.sbs.sbb.Answer;
 
-import ch.qos.logback.core.joran.util.beans.BeanDescriptionFactory;
 import com.sbs.sbb.Question.Question;
+import com.sbs.sbb.Question.QuestionRepository;
 import com.sbs.sbb.Question.QuestionService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-@Controller
 @RequestMapping("/answer")
+@Controller
 @RequiredArgsConstructor
 public class AnswerController {
     private final QuestionService questionService;
     private final AnswerService answerService;
 
     @PostMapping("/create/{id}")
-    public String createAnswer(Model model, @PathVariable("id") Integer id, @RequestParam(value = "content") String content){
+    public String createAnswer(
+            Model model,
+            @PathVariable("id")
+            Integer id,
+            @Valid AnswerForm answerForm,
+            BindingResult bindingResult
+    ) {
+
         // 답변 부모 질문객체를 받아온다.
         Question q = this.questionService.getQuestion(id);
 
-        Answer answer = this.answerService.create(q, content);
+        if ( bindingResult.hasErrors() ) {
+            model.addAttribute("question", q);
+            return "question_detail";
+        }
 
-        return String.format("redirect:/question/detail/%s", id);
+        Answer answer = this.answerService.create(q, answerForm.getContent());
+
+        return "redirect:/question/detail/%d".formatted(id);
     }
 }
